feat: [S12P21A508-170] dashboard request 추가